Update : French translation after regeneration
Correction of mistakes and add of new translation after the regeneratin of the file

--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -1,9 +1,9 @@
-"${0} ${1} already exists.",,
+"${0} ${1} already exists.","${0} ${1} existe déjà.",
 "${0} ${1} has been modified after loading","${0} ${1} a été modifié après le chargement.",
 "${0} ${1} is linked with existing records.","${0} ${1} est lié à des enregistrements existants.",
 "${0} already exists.","${0} existe déjà.",
 "${0} filters applied","${0} filtres appliqués",
-"${0} out of ${1}",,
+"${0} out of ${1}","${0} parmi ${1}",
 "${0} rows","${0} lignes",
 "* required fields","* champs requis",
 0%,,
@@ -19,7 +19,7 @@ Account,Compte,
 "Account Entries","Entrées de compte",
 "Account Name","Nom du compte",
 "Account Type","Type de compte",
-"Accounting Ledger Entry","Entrée du livre comptable",
+"Accounting Ledger Entry","Entrée dans le registre comptable",
 "Accounting Settings","Paramètres de comptabilité",
 Accounts,Comptes,
 "Accounts Payable","Comptes créditeurs",
@@ -32,8 +32,8 @@ Accounts,Comptes,
 "Add Row","Ajouter une ligne",
 "Add Suppliers","Ajouter des fournisseurs",
 "Add Taxes","Ajouter des taxes",
-"Add a few customers to create your first sales invoice",,
-"Add a few suppliers to create your first purchase invoice",,
+"Add a few customers to create your first sales invoice","Ajoutez quelques clients pour créer votre première facture de vente",
+"Add a few suppliers to create your first purchase invoice","Ajoutez quelques fournisseurs pour créer votre première facture d'achat",
 "Add a filter","Ajouter un filtre",
 "Add a remark","Ajouter une remarque",
 "Add invoice terms","Ajouter votre politique de vente",
@@ -47,7 +47,7 @@ Address,Adresse,
 All,Tout,
 Amount,Montant,
 "Amount (Company Currency)","Montant (devise utilisée par la société)",
-"Amount Paid",,
+"Amount Paid","Montant payé",
 "Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","Le montant : ${0} et la déduction fiscale de : ${1} est inférieur au montant total alloué aux références : ${2}.",
 "Amount: ${0} is less than the total amount allocated to references: ${1}.","Le montant : ${0} est inférieur au montant total alloué aux références : ${1}.",
 "An error occurred.","Une erreur s'est produite.",
@@ -77,8 +77,8 @@ Business,Entreprise,
 Cancel,Annuler,
 "Cancel ${0} ${1}?","Annuler ${0} ${1} ?",
 Cancelled,Annulé,
-"Cannot Delete",,
-"Cannot delete ${0} ${1} because of linked entries.",,
+"Cannot Delete","Impossible à supprimer",
+"Cannot delete ${0} ${1} because of linked entries.","Impossible de supprimer ${0} ${1} à cause des entrées liées.",
 "Capital Equipments","Biens d'équipement",
 "Capital Stock","Capital social",
 Cash,Espèces,
@@ -86,7 +86,7 @@ Cash,Espèces,
 "Cash In Hand","Liquidités en main",
 Cashflow,"Flux d'argent",
 "Central Tax","Impôt global",
-"Change DB",,
+"Change DB","Changer la BDD",
 "Change File","Changer le ficher",
 "Change Ref Type","Changer le type de référence",
 Chargeable,Facturable,
@@ -98,7 +98,7 @@ Clear,Effacer,
 "Clearance Date","Date d'autorisation",
 "Click to create","Cliquez pour créer",
 Close,Fermer,
-"Close Frappe Books and try manually",,
+"Close Frappe Books and try manually","Fermez Frappe Books et essayez manuellement",
 Closing,Fermeture,
 "Closing (Cr)","Fermeture (Cr)",
 "Closing (Dr)","Fermeture (Dr)",
@@ -127,13 +127,13 @@ Cr.,,
 Create,Créer,
 "Create Demo","Créer un démo",
 "Create Purchase","Créer un achat",
-"Create Purchase Invoice",,
+"Create Purchase Invoice","Créer une facture d'achat",
 "Create Sale","Créer une vente",
-"Create Sales Invoice",,
+"Create Sales Invoice","Créer une facture de vente",
 "Create a new file and store it in your computer.","Créer un nouveau fichier et l'enregistrer sur votre ordinateur.",
 "Create a new file or select an existing one from your computer","Créer un nouveau fichier ou sélectionner un fichier existant sur votre ordinateur.",
-"Create your first purchase invoice from the created supplier",,
-"Create your first sales invoice for the created customer",,
+"Create your first purchase invoice from the created supplier","Créer votre première facture d'achat liée au fournisseur que vous venez de créer",
+"Create your first sales invoice for the created customer","Créer votre première facture de vente liée au client que vous venez de créer",
 Created,Créé,
 "Created By","Créé par",
 "Creating Items and Parties","Créer des Items et des Partis",
@@ -154,38 +154,38 @@ Customer,Client,
 "Customer Currency","Monnaie du client",
 Customers,Clients,
 Customise,Personnalisez,
-"Customize your invoices by adding a logo and address details",,
+"Customize your invoices by adding a logo and address details","Customisez vos factures en y ajoutant votre logo et adresse",
 Dashboard,"Tableau de bord",
 "Data Import","Importation de données",
 "Database file: ${0}","Fichier de base de donnée : ${0}",
 Date,,
 "Date Format","Format de la date",
 Debit,Débit,
-"Debit Note",,
+"Debit Note","Note de débit",
 Debtors,Débiteurs,
 "Default Account","Compte par défaut",
 Delete,Supprimer,
 "Delete ${0} ${1}?","Supprimer ${0} ${1} ?",
 "Delete ${0}?","Supprimer ${0} ?",
-"Delete Failed",,
+"Delete Failed","Suppression échouée",
 Depreciation,Amortissement,
 "Depreciation Entry","Entrée d'amortissement",
-Description,Description,
+Description,,
 Details,Détails,
 "Direct Expenses","Dépenses directes",
 "Direct Income","Revenu direct",
-Discount,,
-"Discount Account",,
-"Discount Account is not set.",,
+Discount,Réduction,
+"Discount Account","Compte des réductions",
+"Discount Account is not set.","Le compte des réductions n'est pas défini",
 "Discount After Tax","Réduction après taxes",
-"Discount Amount",,
-"Discount Amount (${0}) cannot be greated than Amount (${1}).",,
-"Discount Percent",,
-"Discount Percent (${0}) cannot be greater than 100.",,
-"Discount applied after taxation",,
-"Discount applied before taxation",,
-"Discounted Amount",,
-Discounts,,
+"Discount Amount","Montant de la réduction",
+"Discount Amount (${0}) cannot be greated than Amount (${1}).","Le montant de la réduction (${0}) ne peut pas être plus grand que le montant (${1}).",
+"Discount Percent","Pourcentage de réduction",
+"Discount Percent (${0}) cannot be greater than 100.","Le pourcentage de réduction ne peut pas être plus grand que 100",
+"Discount applied after taxation","Réduction appliée après taxes",
+"Discount applied before taxation","Réduction appliquée après taxes",
+"Discounted Amount","Montant de la réduction",
+Discounts,"Réductions",
 "Display Logo in Invoice","Afficher le logo sur la facture",
 "Display Precision","Précision de l'affichage",
 "Display Precision should have a value between 0 and 9.","La précision de l'affichage doit avoir une valeur comprise entre 0 et 9.",
@@ -204,7 +204,7 @@ Edit,Modifier,
 Email,,
 "Email Address","Adresse électronique",
 Empty,Vide,
-"Enable Discount Accounting",,
+"Enable Discount Accounting","Activer la gestion des réductions",
 "Enter Country to load States","Entrez le Pays pour charger le département",
 "Enter State","Entrez le département",
 "Entertainment Expenses","Dépenses liées au divertissement",
@@ -226,7 +226,7 @@ Export,Exporter,
 Fax,Fax,
 Field,Champ,
 Fieldname,"Nom du champ",
-"File ${0} does not exist",,
+"File ${0} does not exist","Le fichier ${0} n'existe pas",
 "File selection failed.","Selection du fichier échoué.",
 Filter,Filtre,
 "Fiscal Year","Année fiscale",
@@ -249,7 +249,7 @@ GSTR1,GSTR1,
 GSTR2,GSTR2,
 "Gain/Loss on Asset Disposal","Gain/Perte sur la Cession d'Actifs",
 General,Général,
-"General Ledger","Livre des Comptes général",
+"General Ledger","Registre comptable général",
 "Get Started",Commencez,
 "Grand Total","Total général",
 "Grand Total (Company Currency)","Total général (devise utilisée par la société)",
@@ -260,7 +260,7 @@ HSN/SAC,,
 "HSN/SAC Code","Code HSN/SAC",
 "Half Yearly",Semestriel,
 "Half Years",Semestres,
-Help,,
+Help,Aide,
 "Hex Value","Valeur Hexadécimale",
 "Hide Get Started","Cacher 'Commencez'",
 "Hide Group Amounts","Cacher les montants de groupes",
@@ -289,7 +289,7 @@ Investments,Investissements,
 Invoice,Facture,
 "Invoice Created","Facture créée",
 "Invoice Date","Date de la facture",
-"Invoice Discount",,
+"Invoice Discount","Réduction appliquée sur la facture",
 "Invoice No","N° de facture",
 "Invoice No.","N° de facture.",
 "Invoice Setup","Configuration de la facture",
@@ -297,10 +297,10 @@ Invoice,Facture,
 Invoices,Factures,
 Is,Est,
 "Is Empty","Est vide",
-"Is Group","Est du Groupe",
-"Is Not","N'est Pas",
+"Is Group","Est du groupe",
+"Is Not","N'est pas",
 "Is Not Empty","N'est pas vide",
-"Is Whole",,
+"Is Whole","Est complet",
 Item,Article,
 "Item Description","Description de l'Article",
 "Item Name","Nom de l'Article",
@@ -311,10 +311,10 @@ Items,Articles,
 "Journal Entry Account","Compte du livre des comptes",
 "Label Index","Index du Label",
 Language,Langage,
-"Ledger Entries","Entrée dans le livret des comptes",
+"Ledger Entries","Entrée dans le registre",
 "Left Index","Index de Gauche",
 "Legal Expenses","Frais juridiques",
-"Less Filters",,
+"Less Filters","Moins de filtres",
 "Less Than","Moins de",
 Liability,Passifs,
 List,Lister,
@@ -330,13 +330,13 @@ Logo,,
 "Mar 23, 2022",,
 "Marketing Expenses","Dépenses de marketing",
 Minimal,,
-Misc,,
+Misc,Divers,
 "Miscellaneous Expenses","Dépenses diverses",
 Modified,Modifié,
 "Modified By","Modifié par",
 Monthly,Mensuel,
 Months,Mois,
-"More Filters",,
+"More Filters","Plus de filtres",
 Name,Nom,
 Navigate,Naviguer,
 "Net Total","Total Net",
@@ -357,7 +357,7 @@ No,Non,
 "No results found","Aucun Résultat Trouvé",
 "No transactions yet","Aucune transaction pour le moment",
 None,Aucun,
-"Not Saved",,
+"Not Saved","Non enregistré",
 Notes,,
 "Number Series","Numéroter les Séries",
 "Number of ${0}","Numéro de ${0}",
@@ -366,7 +366,7 @@ OK,,
 "Office Maintenance Expenses","Frais d'Entretien des Locaux",
 "Office Rent","Location des locaux",
 "Onboarding Complete","Embauche Finie",
-"Open Count",,
+"Open Count","Compte ouvert",
 "Open Folder","Ouvrir le dossier",
 "Opening (Cr)","Ouverture (Cr)",
 "Opening (Dr)","Ouverture (Dr)",
@@ -405,13 +405,13 @@ Pink,Rose,
 Place,Lieu,
 "Place of supply","Lieu d'approvisionnement",
 "Plants and Machineries","Usines et Machineries",
-"Please Wait",,
-"Please assign the following fields ${0}",,
+"Please Wait","Veuillez patienter",
+"Please assign the following fields ${0}","S'il-vous-plaît définissez les champs suivants ${0}",
 "Please fill all values","Veuillez remplir toutes les valeurs",
-"Please restart and try again",,
+"Please restart and try again","Veuillez redémarrer et réessayer",
 "Please select a file with data to import.","S'il-vous-plaît choisissez un fichier avec des données à importer.",
 "Please select a valid reference type.","S'il-vous-plaît séléctionnez un type de référence valide.",
-"Please set Round Off Account in the Settings.",,
+"Please set Round Off Account in the Settings.","Veuillez définir le compte d'arrondi dans les paramètres",
 "Postal Code","Code postal",
 "Postal Expenses","Dépenses postales",
 "Posting Date","Date d'affichage",
@@ -458,7 +458,7 @@ Report,Rapport,
 "Report Error","Rapport d'erreur",
 "Report Issue","Rapporter un problème",
 Reports,Rapports,
-"Required Fields not Assigned",,
+"Required Fields not Assigned","Champs requis non définis",
 Reset,Réinitialiser,
 "Retained Earnings","Bénéfices non distribués",
 "Reverse Chrg.",Autoliquidation,
@@ -471,8 +471,8 @@ Role,Rôle,
 "Root Type","Type d'origine",
 "Round Off",Arrondir,
 "Round Off Account","Arrondir le Compte",
-"Round Off Account Not Found",,
-"Rounded Off",,
+"Round Off Account Not Found","Compte d'arrondi non trouvé",
+"Rounded Off","Arrondis",
 Salary,Salaire,
 Sales,Ventes,
 "Sales Expenses","Frais de vente",
@@ -504,7 +504,7 @@ Select,Sélectionner,
 "Select folder","Sélectionner un dossier",
 "Selected file","Fichier sélectionné",
 Service,,
-"Set Discount Amount",,
+"Set Discount Amount","Définir le montant de la réduction",
 "Set an Import Type","Definir un Type d'Import",
 "Set the display language.","Définir une Langue d'Affichage",
 "Set the local code. This is used for number formatting.","Définissez le code local, il est utilisé pour le formatage des numéros.",
@@ -526,8 +526,8 @@ Setup,Configuration,
 "Setup your tax templates for your sales or purchase transactions","Configurez votre modèle de taxe pour vos ventes ou transactions d'achats",
 "Show Me","Montre Moi",
 "Single Value","Une seule valeur",
-"Skip Child Tables",,
-"Skip Transactions",,
+"Skip Child Tables","Sauter les sous-tables",
+"Skip Transactions","Sauter les transactions",
 "Smallest Currency Fraction Value","Valeur de la plus petite fraction de la monnaie",
 Softwares,Logiciels,
 "Something has gone terribly wrong. Please check the console and raise an issue.","Quelque chose s'est terriblement mal passé. Veuillez vérifier la console et rapportez le problème.",
@@ -568,7 +568,7 @@ Tax,Taxe,
 "Tax ID","Numéro d'identification fiscale",
 "Tax Summary","relevé fiscal",
 "Taxable Value","Valeur imposable",
-"Taxed Amount",,
+"Taxed Amount","Montant taxé",
 Taxes,Taxes,
 Teal,"Bleu Sarcelle",
 "Telephone Expenses","Frais Téléphonique",
@@ -584,7 +584,7 @@ Terms,Conditions,
 "This action is permanent","Cette action est permanente",
 "This action is permanent and will cancel the following payment: ${0}","Cette action est permanente et annulera le paiement suivant : ${0}",
 "This action is permanent and will cancel the following payments: ${0}","Cette action est permanente et annulera les paiements suivants : ${0}",
-"This action is permanent and will delete associated ledger entries.","Cette action est permanente et supprimera les écritures dans le livret comptables associées.",
+"This action is permanent and will delete associated ledger entries.","Cette action est permanente et supprimera les écritures dans le registre associées.",
 "This action is permanent.","Cette action est permanente",
 "Times New Roman",,
 "To Account","Au compte",
@@ -634,4 +634,4 @@ Yes,Oui,
 john@doe.com,,
 reports,rapports,
 setup,configuration,
-"verify the imported data and click on",,
+"verify the imported data and click on","Vérifiez les données importées et cliquez sur",
