Update : fr.csv fix translation

--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -60,11 +60,11 @@ Asset,"Bien actif",
 Balance,Balance,
 "Balance Sheet","Bilan Comptable",
 Bank,Banque,
-"Bank Accounts","Comptes banquaires",
-"Bank Entry","Entrée banquaire",
+"Bank Accounts","Comptes bancaires",
+"Bank Entry","Entrée bancaire",
 "Bank Name","Nom de la banque",
 "Bank Overdraft Account","Découvert bancaire",
-"Based On","Bassé sur",
+"Based On","Basé sur",
 Basic,Basique,
 Bill,Facture,
 "Bill Created","Facture créée",
@@ -76,7 +76,7 @@ Buildings,Bâtiments,
 Business,Entreprise,
 Cancel,Annuler,
 "Cancel ${0} ${1}?","Annuler ${0} ${1} ?",
-Cancelled,Annulé,
+Cancelled,Anulé,
 "Cannot Delete","Impossible à supprimer",
 "Cannot delete ${0} ${1} because of linked entries.","Impossible de supprimer ${0} ${1} à cause des entrées liées.",
 "Capital Equipments","Biens d'équipement",
@@ -90,7 +90,7 @@ Cashflow,"Flux d'argent",
 "Change File","Changer le ficher",
 "Change Ref Type","Changer le type de référence",
 Chargeable,Facturable,
-"Chart Of Accounts Reviewed","Graphique du compte sélectioné",
+"Chart Of Accounts Reviewed","Graphique du compte sélectionné",
 "Chart of Accounts","Graphique des comptes",
 Cheque,Chèque,
 "City / Town","Ville / Village",
@@ -105,7 +105,7 @@ Closing,Fermeture,
 Color,Couleur,
 "Commission on Sales","Commission sur les ventes",
 Common,Autres,
-"Common Items","Autres Items",
+"Common Items","Autres items",
 "Company Address","Adresse de l'entreprise",
 "Company Logo","Logo de l'entreprise",
 "Company Name","Nom de l'entreprise",
@@ -113,19 +113,19 @@ Common,Autres,
 "Company Setup","Création d'entreprise",
 Completed,Complété,
 Condition,,
-"Consolidate Columns","Consolider les Colones",
+"Consolidate Columns","Consolider les colonnes",
 Contains,Contient,
-"Contra Entry","Entrée Contrat",
+"Contra Entry","Entrée contrat",
 "Cost of Goods Sold","Coût des marchandises vendues",
 "Could not import ${0} ${1}.","Nous n'avons pas pu importer ${0} ${1}.",
-"Could not select file.","Nous n'avons pas pu selectioner le fichier.",
+"Could not select file.","Nous n'avons pas pu sélectionner le fichier.",
 Country,Pays,
 "Country Code","Code du Pays",
 "Country code used to initialize regional settings.","Code du Pays utilisé pour initialiser les réglages régionaux.",
 Courier,,
 Cr.,,
 Create,Créer,
-"Create Demo","Créer un démo",
+"Create Demo","Créer une démo",
 "Create Purchase","Créer un achat",
 "Create Purchase Invoice","Créer une facture d'achat",
 "Create Sale","Créer une vente",
@@ -136,8 +136,8 @@ Create,Créer,
 "Create your first sales invoice for the created customer","Créer votre première facture de vente liée au client que vous venez de créer",
 Created,Créé,
 "Created By","Créé par",
-"Creating Items and Parties","Créer des Items et des Partis",
-"Creating Journal Entries","Créer des entrées dans le livret de compte",
+"Creating Items and Parties","Créer des items et des partis",
+"Creating Journal Entries","Créer des entrées dans le livre des comptes",
 "Creating Purchase Invoices","Création de factures d'achats",
 Credit,Crédit,
 "Credit Card Entry","Entrée Carte de Crédit",
@@ -148,7 +148,7 @@ Currency,Monnaie,
 Current,Actuel,
 "Current Assets","Actifs courants",
 "Current Liabilities","Passifs courants",
-"Custom Hex","Hexagone personnalisé",
+"Custom Hex","Hexadécimal custom",
 Customer,Client,
 "Customer Created","Client créé",
 "Customer Currency","Monnaie du client",
@@ -182,7 +182,7 @@ Discount,Réduction,
 "Discount Amount (${0}) cannot be greated than Amount (${1}).","Le montant de la réduction (${0}) ne peut pas être plus grand que le montant (${1}).",
 "Discount Percent","Pourcentage de réduction",
 "Discount Percent (${0}) cannot be greater than 100.","Le pourcentage de réduction ne peut pas être plus grand que 100",
-"Discount applied after taxation","Réduction appliée après taxes",
+"Discount applied after taxation","Réduction appliquée après taxes",
 "Discount applied before taxation","Réduction appliquée après taxes",
 "Discounted Amount","Montant de la réduction",
 Discounts,"Réductions",
@@ -227,10 +227,10 @@ Fax,Fax,
 Field,Champ,
 Fieldname,"Nom du champ",
 "File ${0} does not exist","Le fichier ${0} n'existe pas",
-"File selection failed.","Selection du fichier échoué.",
+"File selection failed.","Sélection du fichier échoué.",
 Filter,Filtre,
 "Fiscal Year","Année fiscale",
-"Fiscal Year End Date","Date de finde l'année fiscale",
+"Fiscal Year End Date","Date de fin de l'année fiscale",
 "Fiscal Year Start Date","Date de début de l'année fiscale",
 "Fixed Asset","Actif Fixe",
 "Fixed Assets","Actifs fixes",
@@ -247,7 +247,7 @@ Fraction,Fraction,
 "GSTIN No.","N° GSTIN",
 GSTR1,GSTR1,
 GSTR2,GSTR2,
-"Gain/Loss on Asset Disposal","Gain/Perte sur la Cession d'Actifs",
+"Gain/Loss on Asset Disposal","Gain/Perte sur la cession d'actifs",
 General,Général,
 "General Ledger","Registre comptable général",
 "Get Started",Commencez,
@@ -261,25 +261,25 @@ HSN/SAC,,
 "Half Yearly",Semestriel,
 "Half Years",Semestres,
 Help,Aide,
-"Hex Value","Valeur Hexadécimale",
+"Hex Value","Valeur hexadécimale",
 "Hide Get Started","Cacher 'Commencez'",
 "Hide Group Amounts","Cacher les montants de groupes",
-"Hides the Get Started section from the sidebar. Change will be visible on restart or refreshing the app.","Masque la section 'Commencez' de la barre latérale. Le changement sera visible au redémarrage ou au rafraichissement de l'application.",
+"Hides the Get Started section from the sidebar. Change will be visible on restart or refreshing the app.","Masque la section 'Commencez' de la barre latérale. Le changement sera visible au redémarrage ou au rafraîchissement de l'application.",
 "How to Use Data Import","Comment utiliser l'import des données",
 INR,,
 Image,Image,
-"Import Data","Importer les Données",
-"Import Failed","Import Échoué",
-"Import More","Importer Plus",
-"Import Success","Import Validé",
-"Import Type","Type d'Import",
-"Importer Settings","Paramètres de l'Importeur",
-"Include Cancelled","Ajout Annulé",
+"Import Data","Importer les données",
+"Import Failed","Import échoué",
+"Import More","Importer plus",
+"Import Success","Import validé",
+"Import Type","Type d'import",
+"Importer Settings","Paramètres de l’importeur",
+"Include Cancelled","Ajout annulé",
 Income,Revenu,
 "Income Account","Compte de revenus",
 Indigo,,
-"Indirect Expenses","Dépenses Indirectes",
-"Indirect Income","Revenu Indirect",
+"Indirect Expenses","Dépenses indirectes",
+"Indirect Income","Revenu indirect",
 Inflow,Revenus,
 "Instance Id","Id de l'Instance",
 "Intergrated Tax","Taxe intégrée",
@@ -306,7 +306,7 @@ Item,Article,
 "Item Name","Nom de l'Article",
 Items,Articles,
 "John Doe",,
-"Journal Entries","Entrées du journal des comptes",
+"Journal Entries","Entrées du livre des comptes",
 "Journal Entry","Entrée du livre des comptes",
 "Journal Entry Account","Compte du livre des comptes",
 "Label Index","Index du Label",
@@ -354,30 +354,30 @@ No,Non,
 "No expenses in this period","Aucune dépense dans cette période",
 "No filters selected","Aucun filtre sélectionné",
 "No labels have been assigned.","Aucun label n'a été assigné.",
-"No results found","Aucun Résultat Trouvé",
+"No results found","Aucun résultat trouvé",
 "No transactions yet","Aucune transaction pour le moment",
 None,Aucun,
 "Not Saved","Non enregistré",
 Notes,,
-"Number Series","Numéroter les Séries",
+"Number Series","Numéroter les séries",
 "Number of ${0}","Numéro de ${0}",
 OK,,
-"Office Equipments","Equipements des Locaux",
-"Office Maintenance Expenses","Frais d'Entretien des Locaux",
+"Office Equipments","Équipements des locaux",
+"Office Maintenance Expenses","Frais d'Entretien des locaux",
 "Office Rent","Location des locaux",
-"Onboarding Complete","Embauche Finie",
+"Onboarding Complete","Embauche finie",
 "Open Count","Compte ouvert",
 "Open Folder","Ouvrir le dossier",
 "Opening (Cr)","Ouverture (Cr)",
 "Opening (Dr)","Ouverture (Dr)",
-"Opening Balance Equity","Solde d'ouverture Fonds propres",
+"Opening Balance Equity","Solde d'ouverture fonds propres",
 "Opening Balances","Soldes d'ouverture",
-"Opening Entry","Ouvrir l'Entrée",
+"Opening Entry","Ouvrir l'entrée",
 Orange,,
 Organisation,Organisation,
 Outflow,Dépenses,
 "Outstanding Amount","Montant impayé",
-"Pad Zeros","Remplir  de Zéros",
+"Pad Zeros","Remplir  de zéros",
 Page,,
 Paid,Payé,
 Parent,,
@@ -410,7 +410,7 @@ Place,Lieu,
 "Please fill all values","Veuillez remplir toutes les valeurs",
 "Please restart and try again","Veuillez redémarrer et réessayer",
 "Please select a file with data to import.","S'il-vous-plaît choisissez un fichier avec des données à importer.",
-"Please select a valid reference type.","S'il-vous-plaît séléctionnez un type de référence valide.",
+"Please select a valid reference type.","S'il-vous-plaît sélectionnez un type de référence valide.",
 "Please set Round Off Account in the Settings.","Veuillez définir le compte d'arrondi dans les paramètres",
 "Postal Code","Code postal",
 "Postal Expenses","Dépenses postales",
@@ -461,52 +461,52 @@ Reports,Rapports,
 "Required Fields not Assigned","Champs requis non définis",
 Reset,Réinitialiser,
 "Retained Earnings","Bénéfices non distribués",
-"Reverse Chrg.",Autoliquidation,
+"Reverse Chrg.",Auto-liquidation,
 Reverted,Rétabli,
 Reverts,Rétablis,
 "Review Accounts","Révision des Comptes",
 "Review your chart of accounts, add any account or tax heads as needed","Regarder votre graphique de compte, ajouter des comptes ou des taxes au besoin",
-"Right Index","Index Droit",
+"Right Index","Index droit",
 Role,Rôle,
 "Root Type","Type d'origine",
 "Round Off",Arrondir,
-"Round Off Account","Arrondir le Compte",
+"Round Off Account","Arrondir le compte",
 "Round Off Account Not Found","Compte d'arrondi non trouvé",
 "Rounded Off","Arrondis",
 Salary,Salaire,
 Sales,Ventes,
 "Sales Expenses","Frais de vente",
-"Sales Invoice","Facture de Vente",
-"Sales Invoice Item","Facture de Vente d'Article",
-"Sales Invoices","Factures des Ventes",
-"Sales Item Created","Article en Vente Créé",
-"Sales Items","Articles en Vente",
-"Sales Payments","Paiement des Ventes",
+"Sales Invoice","Facture de vente",
+"Sales Invoice Item","Facture de vente d'article",
+"Sales Invoices","Factures des ventes",
+"Sales Item Created","Article en vente créé",
+"Sales Items","Articles en vente",
+"Sales Payments","Paiement des ventes",
 Save,Enregistrer,
-"Save Template","Enregister le Modèle",
+"Save Template","Enregistrer le modèle",
 "Save as PDF","Enregistrer en PDF",
 "Save as PDF Successful","Enregistré en PDF avec succès",
 Saved,Enregistré,
 Saving,Enregistrement,
 Search,Recherche,
-"Secured Loans","Prêts Garantis",
+"Secured Loans","Prêts garantis",
 "Securities and Deposits","Titres et dépôts",
 Select,Sélectionner,
 "Select CoA","Sélectionner le CoA",
-"Select Color","Selectionner la Couleur",
-"Select Country","Sélectionner le Pays",
-"Select File","Sélectionner le Fichier",
-"Select Folder","Sélectionner le Dossier",
-"Select Image","Sélectionner l'Image",
-"Select Logo","Sélectionner le Logo",
+"Select Color","Sélectionner la couleur",
+"Select Country","Sélectionner le pays",
+"Select File","Sélectionner le fichier",
+"Select Folder","Sélectionner le dossier",
+"Select Image","Sélectionner l'image",
+"Select Logo","Sélectionner le logo",
 "Select a file for import","Sélectionner un fichier pour l'import",
 "Select file","Sélectionnez un fichier",
 "Select folder","Sélectionner un dossier",
 "Selected file","Fichier sélectionné",
 Service,,
 "Set Discount Amount","Définir le montant de la réduction",
-"Set an Import Type","Definir un Type d'Import",
-"Set the display language.","Définir une Langue d'Affichage",
+"Set an Import Type","Définir un type d'Import",
+"Set the display language.","Définir une langue d'affichage",
 "Set the local code. This is used for number formatting.","Définissez le code local, il est utilisé pour le formatage des numéros.",
 "Sets how many digits are shown after the decimal point.","Définit le nombre de chiffres affichés après le point décimal.",
 "Sets the app-wide date display format.","Définit le format d'affichage de la date pour l'application.",
@@ -519,8 +519,8 @@ Setup,Configuration,
 "Setup Complete","Configuration terminée",
 "Setup Wizard","Assistant de configuration",
 "Setup Your Workspace","Configurez votre espace de travail",
-"Setup system defaults like date format and display precision","Configurez les unitées par défaut du système comme le format de la date ou la précision d'affichage des chiffres",
-"Setup your company information, email, country and fiscal year","Configurez les informations de votre entreprise tel que l'email, le pays, et l'année fiscale",
+"Setup system defaults like date format and display precision","Configurez les unités par défaut du système comme le format de la date ou la précision d'affichage des chiffres",
+"Setup your company information, email, country and fiscal year","Configurez les informations de votre entreprise tel que l’e-mail, le pays, et l'année fiscale",
 "Setup your opening balances before performing any accounting entries","Configurez votre solde bancaire de base avant d'enregistrer une entrée comptable",
 "Setup your organization","Configurer votre organisation",
 "Setup your tax templates for your sales or purchase transactions","Configurez votre modèle de taxe pour vos ventes ou transactions d'achats",
@@ -545,9 +545,9 @@ Stock,,
 "Stock Liabilities","Sommes dues sur le Stock",
 "Stock Received But Not Billed","Stock reçu mais non facturé",
 Submit,Soumettre,
-"Submit Journal Entry?","Soumettre l'entrée dasn le Journal ?",
-"Submit Purchase Invoice?","Soumettre la facture d'achat",
-"Submit Sales Invoice?","Soumettre la facture de vente",
+"Submit Journal Entry?","Soumettre l'entrée dans le livre des comptes ?",
+"Submit Purchase Invoice?","Soumettre la facture d'achat ?",
+"Submit Sales Invoice?","Soumettre la facture de vente ?",
 "Submit on Import","Soumettre un import",
 Submitted,Soumis,
 Submitting,"Envoi en cours",
@@ -571,12 +571,12 @@ Tax,Taxe,
 "Taxed Amount","Montant taxé",
 Taxes,Taxes,
 Teal,"Bleu Sarcelle",
-"Telephone Expenses","Frais Téléphonique",
+"Telephone Expenses","Frais téléphonique",
 Template,Modèle,
 Temporary,Temporaire,
-"Temporary Accounts","Comptes Temporaires",
+"Temporary Accounts","Comptes temporaires",
 "Temporary Opening","Ouverture temporaire",
-Terms,Conditions,
+"Terms","Conditions",
 "The following ${0} entries were created: ${1}","Les ${0} entrées suivantes ont été créées: ${1}",
 "This Month","Ce mois",
 "This Quarter","Ce trimestre",
@@ -588,41 +588,41 @@ Terms,Conditions,
 "This action is permanent.","Cette action est permanente",
 "Times New Roman",,
 "To Account","Au compte",
-"To Account and From Account can't be the same: ${0}","Le Compte Originaire et Destinataire ne peut pas être le même : ${0}",
+"To Account and From Account can't be the same: ${0}","Le compte originaire et destinataire ne peut pas être le même : ${0}",
 "To Date","À ce jour",
 "To Year","À cette année",
-"Top Expenses","Dépenses Principales",
+"Top Expenses","Dépenses principales",
 Total,,
-"Total Asset (Debit)","Actif Total (Debit)",
-"Total Credit","Crédit Total",
-"Total Debit","Débit Total",
+"Total Asset (Debit)","Actif total (débit)",
+"Total Credit","Crédit total",
+"Total Debit","Débit total",
 "Total Debit: ${0} must be equal to Total Credit: ${1}","Le débit total: ${0} doit être égal au crédit total : ${1}",
-"Total Equity (Credit)","Capitaux propres totaux (Crédit)",
+"Total Equity (Credit)","Capitaux propres totaux (crédit)",
 "Total Expense (Debit)","Dépense totale (débit)",
 "Total Income (Credit)","Revenu total (crédit)",
-"Total Liability (Credit)","Passif total (crédit) ",
-"Total Profit","Profit Total",
+"Total Liability (Credit)","Passif total (crédit)",
+"Total Profit","Profit total",
 "Total Spending","Dépenses totales",
 Transfer,Transfert,
 "Transfer Type","Type de transfert",
-"Travel Expenses","Frais de Transport",
-"Trial Balance","Balance Comptable",
-Type,Type,
+"Travel Expenses","Frais de transport",
+"Trial Balance","Balance comptable",
+Type,,
 "Type to search...","Type à chercher...",
 UOM,,
 "Unit Type","Type d'unité",
 Unpaid,Impayé,
 "Unsecured Loans","Prêts non garantis",
-"Until Date","Date Butoir",
+"Until Date","Date butoir",
 "User Remark","Remarque de l'utilisateur",
 "Utility Expenses","Dépenses de services publics",
 Value,Valeur,
 "Value missing for ${0}","Valeur manquante pour ${0}",
 Version,,
-"View Purchases","Voir les Achats",
-"View Sales","Voir les Ventes",
+"View Purchases","Voir les achats",
+"View Sales","Voir les ventes",
 "Welcome to Frappe Books","Bienvenue chez Frappe Books",
-"Write Off",Déductible,
+"Write Off",déduction,
 "Write Off Account","Compte des déduction fiscales",
 "Write Off Account not set. Please set Write Off Account in General Settings","Compte des déduction fiscales no défini. Veuillez entrer un Compte des déduction fiscales dans les paramètres généraux",
 "Write Off Entry","Entrée de déductions fiscales",
