Update : csv.fr fix single term quote

--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -576,7 +576,7 @@ Template,Modèle,
 Temporary,Temporaire,
 "Temporary Accounts","Comptes temporaires",
 "Temporary Opening","Ouverture temporaire",
-"Terms","Conditions",
+Terms,Conditions,
 "The following ${0} entries were created: ${1}","Les ${0} entrées suivantes ont été créées: ${1}",
 "This Month","Ce mois",
 "This Quarter","Ce trimestre",
