--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -297,7 +297,7 @@ Invoice,Facture,
 Invoices,Factures,
 Is,Est,
 "Is Empty","Est vide",
-"Is Group","Est du groupe",
+"Is Group","Est un groupe",
 "Is Not","N'est pas",
 "Is Not Empty","N'est pas vide",
 "Is Whole","Est complet",
@@ -363,7 +363,7 @@ Notes,,
 "Number of ${0}","Numéro de ${0}",
 OK,,
 "Office Equipments","Équipements des locaux",
-"Office Maintenance Expenses","Frais d'Entretien des locaux",
+"Office Maintenance Expenses","Frais d'entretien des locaux",
 "Office Rent","Location des locaux",
 "Onboarding Complete","Embauche finie",
 "Open Count","Compte ouvert",
