fix(ui): semantics Setup -> Set Up

--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -518,12 +518,12 @@ Settings,Paramètres,
 Setup,Configuration,
 "Setup Complete","Configuration terminée",
 "Setup Wizard","Assistant de configuration",
-"Setup Your Workspace","Configurez votre espace de travail",
+"Set Up Your Workspace","Configurez votre espace de travail",
 "Setup system defaults like date format and display precision","Configurez les unités par défaut du système comme le format de la date ou la précision d'affichage des chiffres",
-"Setup your company information, email, country and fiscal year","Configurez les informations de votre entreprise tel que l’e-mail, le pays, et l'année fiscale",
-"Setup your opening balances before performing any accounting entries","Configurez votre solde bancaire de base avant d'enregistrer une entrée comptable",
-"Setup your organization","Configurer votre organisation",
-"Setup your tax templates for your sales or purchase transactions","Configurez votre modèle de taxe pour vos ventes ou transactions d'achats",
+"Set up your company information, email, country and fiscal year","Configurez les informations de votre entreprise tel que l’e-mail, le pays, et l'année fiscale",
+"Set up your opening balances before performing any accounting entries","Configurez votre solde bancaire de base avant d'enregistrer une entrée comptable",
+"Set up your organization","Configurer votre organisation",
+"Set up your tax templates for your sales or purchase transactions","Configurez votre modèle de taxe pour vos ventes ou transactions d'achats",
 "Show Me","Montre Moi",
 "Single Value","Une seule valeur",
 "Skip Child Tables","Sauter les sous-tables",
