chore: minor updates to tr translation

--- a/translations/tr.csv
+++ b/translations/tr.csv
@@ -103,7 +103,7 @@ Closing (Cr),Kapanış (Cr)
 Closing (Dr),Kapanış (Dr)
 Color,Renk
 Commission on Sales,Satış Komisyonu
-Common,Ortak
+Common,Genel
 Common Items,Ortak Öğeler
 Company Address,Şirket Adresi
 Company Logo,Şirket Logosu
@@ -123,7 +123,7 @@ Country Code,Ülke Kodu
 Country code used to initialize regional settings.,Bölgesel ayarları başlatmak için kullanılan ülke kodu.
 Courier,Kurye
 Cr.,Cr.
-Create,Yaratmak
+Create,Uretmek
 Create Bill,Fatura Oluştur
 Create Demo,Demo Oluştur
 Create Invoice,Fatura Oluştur
@@ -133,7 +133,7 @@ Create a new file and store it in your computer.,Yeni bir dosya oluşturun ve bi
 Create a new file or select an existing one from your computer,Yeni bir dosya oluşturun veya bilgisayarınızdan varolan bir dosyayı seçin
 Create your first bill and mail it to your supplier,İlk faturanızı oluşturun ve tedarikçinize postayla gönderin
 Create your first invoice and mail it to your customer,İlk faturanızı oluşturun ve müşterinize postayla gönderin
-Created,Yaratıldı
+Created,Üretildi
 Created By,Tarafından oluşturuldu
 Creating Items and Parties,Öğeler ve Taraflar Oluşturma
 Creating Journal Entries,Günlük Girişleri Oluşturma
