--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -1,4 +1,4 @@
-"${0} ${1} already exists.","${0} ${1} existe déjà.",
+"${0} ${1} already exists.",Personnalisez vos factures en y ajoutant votre logo et adresse,
 "${0} ${1} has been modified after loading","${0} ${1} a été modifié après le chargement.",
 "${0} ${1} is linked with existing records.","${0} ${1} est lié à des enregistrements existants.",
 "${0} already exists.","${0} existe déjà.",
@@ -38,7 +38,7 @@ Accounts,Comptes,
 "Add a remark","Ajouter une remarque",
 "Add invoice terms","Ajouter votre politique de vente",
 "Add products or services that you buy from your suppliers","Ajoutez des produits ou services que vous achetez à vos fournisseurs",
-"Add products or services that you sell to your customers","Ajouter les produits ou services que vous vendez à vos clients.",
+"Add products or services that you sell to your customers","Ajouter les produits ou services que vous vendez à vos clients",
 Address,Adresse,
 "Address Display","Affichage de l'adresse",
 "Address Line 1","Ligne d'adresse 1",
@@ -76,7 +76,7 @@ Buildings,Bâtiments,
 Business,Entreprise,
 Cancel,Annuler,
 "Cancel ${0} ${1}?","Annuler ${0} ${1} ?",
-Cancelled,Anulé,
+Cancelled,Annulé,
 "Cannot Delete","Impossible à supprimer",
 "Cannot delete ${0} ${1} because of linked entries.","Impossible de supprimer ${0} ${1} à cause des entrées liées.",
 "Capital Equipments","Biens d'équipement",
@@ -143,8 +143,8 @@ Credit,Crédit,
 "Credit Card Entry","Entrée Carte de Crédit",
 "Credit Note",Avoir,
 Creditors,Créanciers,
-Currency,Monnaie,
-"Currency Name","Nom de la monnaie",
+Currency,Devise,
+"Currency Name","Nom de la devise",
 Current,Actuel,
 "Current Assets","Actifs courants",
 "Current Liabilities","Passifs courants",
@@ -153,11 +153,11 @@ Customer,Client,
 "Customer Created","Client créé",
 "Customer Currency","Monnaie du client",
 Customers,Clients,
-Customise,Personnalisez,
-"Customize your invoices by adding a logo and address details","Customisez vos factures en y ajoutant votre logo et adresse",
+Customise,Personnaliser,
+"Customize your invoices by adding a logo and address details",Personnalisez vos factures en y ajoutant votre logo et adresse,
 Dashboard,"Tableau de bord",
 "Data Import","Importation de données",
-"Database file: ${0}","Fichier de base de donnée : ${0}",
+"Database file: ${0}","Fichier de base de données : ${0}",
 Date,,
 "Date Format","Format de la date",
 Debit,Débit,
@@ -176,7 +176,7 @@ Details,Détails,
 "Direct Income","Revenu direct",
 Discount,Réduction,
 "Discount Account","Compte des réductions",
-"Discount Account is not set.","Le compte des réductions n'est pas défini",
+"Discount Account is not set.","Le compte des réductions n'est pas défini.",
 "Discount After Tax","Réduction après taxes",
 "Discount Amount","Montant de la réduction",
 "Discount Amount (${0}) cannot be greated than Amount (${1}).","Le montant de la réduction (${0}) ne peut pas être plus grand que le montant (${1}).",
@@ -189,7 +189,7 @@ Discounts,"Réductions",
 "Display Logo in Invoice","Afficher le logo sur la facture",
 "Display Precision","Précision de l'affichage",
 "Display Precision should have a value between 0 and 9.","La précision de l'affichage doit avoir une valeur comprise entre 0 et 9.",
-"Dividends Paid","Dividendes versés",
+"Dividends Paid","Dividendes versées",
 Docs,Documents,
 Documentation,Documentation,
 "Does Not Contain","Ne contient pas",
@@ -222,7 +222,7 @@ Expenses,Dépenses,
 "Expenses Included In Valuation","Dépenses incluses dans la valorisation ",
 Export,Exporter,
 "Export Failed","Export Échoué",
-"Export Successful","Export réussie",
+"Export Successful","Export réussi",
 Fax,Fax,
 Field,Champ,
 Fieldname,"Nom du champ",
@@ -377,13 +377,13 @@ Orange,,
 Organisation,Organisation,
 Outflow,Dépenses,
 "Outstanding Amount","Montant impayé",
-"Pad Zeros","Remplir  de zéros",
+"Pad Zeros","Remplir de zéros",
 Page,,
 Paid,Payé,
 Parent,,
 "Parent Account","Compte parent",
 Party,Partie,
-"Patch Run","Éxecuter les correctifs",
+"Patch Run","Exécuter les correctifs",
 Pay,Payer,
 Payable,Payable,
 Payment,Paiement,
@@ -434,7 +434,7 @@ Purchases,Achats,
 Purple,Violet,
 Quantity,Quantité,
 Quarterly,Trimestriel,
-Quarters,Trimestre,
+Quarters,Trimestres,
 Rate,Tarif,
 "Rate (${0}) cannot be less zero.","Le Tarif (${0}) ne peut pas être inférieur à zéro.",
 "Rate (Company Currency)","Tarif (devise utilisée par la société)",
@@ -584,7 +584,7 @@ Terms,Conditions,
 "This action is permanent","Cette action est permanente",
 "This action is permanent and will cancel the following payment: ${0}","Cette action est permanente et annulera le paiement suivant : ${0}",
 "This action is permanent and will cancel the following payments: ${0}","Cette action est permanente et annulera les paiements suivants : ${0}",
-"This action is permanent and will delete associated ledger entries.","Cette action est permanente et supprimera les écritures dans le registre associées.",
+"This action is permanent and will delete associated ledger entries.","Cette action est permanente et supprimera les écritures dans le registre associés.",
 "This action is permanent.","Cette action est permanente",
 "Times New Roman",,
 "To Account","Au compte",
