Add some missing fr traduction

--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -102,6 +102,7 @@ Close,Fermer,
 Closing,Fermeture,
 "Closing (Cr)","Fermeture (Cr)",
 "Closing (Dr)","Fermeture (Dr)",
+Collapse,Réduire,
 Color,Couleur,
 "Commission on Sales","Commission sur les ventes",
 Common,Autres,
@@ -205,6 +206,7 @@ Email,,
 "Email Address","Adresse électronique",
 Empty,Vide,
 "Enable Discount Accounting","Activer la gestion des réductions",
+"Enable Inventory","Activer l'inventaire",
 "Enter Country to load States","Entrez le Pays pour charger le département",
 "Enter State","Entrez le département",
 "Entertainment Expenses","Dépenses liées au divertissement",
@@ -216,6 +218,7 @@ Error,Erreur,
 "Exchange Rate","Taux de change",
 "Excise Entry","Entrée d'acquis",
 "Existing File","Fichier existant",
+Expand,Développer,
 Expense,Dépenses,
 "Expense Account","Compte de dépenses",
 Expenses,Dépenses,
@@ -511,6 +514,7 @@ Service,,
 "Sets how many digits are shown after the decimal point.","Définit le nombre de chiffres affichés après le point décimal.",
 "Sets the app-wide date display format.","Définit le format d'affichage de la date pour l'application.",
 "Sets the internal precision used for monetary calculations. Above 6 should be sufficient for most currencies.","Définit la précision interne utilisée pour les calculs monétaires. Une précision supérieure à 6 devrait être suffisante pour la plupart des monnaies.",
+"Set Up","Configurer",
 "Setting Up Instance","Paramétrage de l'Instance",
 "Setting Up...",Paramétrage...,
 Settings,Paramètres,
